@@ -30,6 +30,7 @@ elseif(CMAKE_BUILD_TYPE STREQUAL Deb_Stam)
 
 elseif(CMAKE_BUILD_TYPE STREQUAL Stampede_TAU)
   message("-- ${CMAKE_CURRENT_SOURCE_DIR} > Stampede instructed build")
+
   set(CMAKE_C_COMPILER  tau_cc.sh)
   set(CMAKE_CXX_COMPILER  tau_cxx.sh)
   set(TRANSPORT_LIB "$ENV{WORK}/envs/transports_icc_impi" CACHE PATH "The path to transport libs.")
@@ -43,10 +44,12 @@ elseif(CMAKE_BUILD_TYPE STREQUAL Stampede_TAU)
   #set(TRANSPORT_LIB "$ENV{WORK}/envs/transports_icc_impi_tau" CACHE PATH "The path to transport libs.")
 
 elseif(CMAKE_BUILD_TYPE STREQUAL Bridges)
+  set(CMAKE_C_COMPILER  icc)
+  set(CMAKE_CXX_COMPILER  icpc)
   message("-- ${CMAKE_CURRENT_SOURCE_DIR} > Bridges uninstructed build")
   set(TRANSPORT_LIB "$ENV{WORK}/envs/gcc_mvapich" CACHE PATH "The path to transport libs")
-  set(CMAKE_C_FLAGS "-O3 -fPIC ${ADD_FLAGS}" CACHE STRING "cflags")
-  set(CMAKE_CXX_FLAGS "-O3 -fPIC ${ADD_FLAGS}" CACHE STRING "cxxflags")
+  set(CMAKE_C_FLAGS "-O3 " CACHE STRING "cflags")
+  set(CMAKE_CXX_FLAGS "-O3 " CACHE STRING "cxxflags")
   set(BOOST_ROOT "$ENV{WORK}/software/install" CACHE PATH "Boost path")
   set(DECAF_PREFIX "$ENV{WORK}/software/install" CACHE PATH "decaf path")
 
