@@ -10,6 +10,7 @@
 #SBATCH --mail-type=BEGIN
 # send mail to this address
 #SBATCH --mail-user=lifen@iupui.edu
+NSTOP=100
 
 # procs placement
 num_apps=3
