@@ -1,0 +1,36 @@
+#!/bin/bash
+#SBATCH --job-name="lbm_sim_only"
+#SBATCH --output="results/%j.out"
+#SBATCH --partition=RM
+#SBATCH --nodes=2
+#SBATCH --ntasks-per-node=28
+#SBATCH -t 00:8:00
+#SBATCH --export=ALL
+
+#SBATCH --mail-type=BEGIN
+# send mail to this address
+#SBATCH --mail-user=lifen@iupui.edu
+
+#This job runs with 2 nodes, 24 cores per node for a total of 48 cores.
+#ibrun in verbose mode will give binding detail ##################parameter setting#################
+NSTOP=100 # how many steps
+
+# procs placement
+num_apps=1
+
+# slots used by this app
+procs_this_app=(32)
+
+# number of nodes used by this app
+nodes_this_app=(2)
+
+
+PBS_O_HOME=$HOME
+PBS_O_WORKDIR=$(pwd)
+export SCRATCH_DIR=${SCRATCH}/sim_only/${SLURM_JOBID}
+
+#export MyTransport=ADIOS_STAGING_FLEXPATH
+unset MyTransport
+source ${PBS_O_WORKDIR}/scripts/sim_only.sh
+
+
