@@ -1,2 +1,14 @@
 record for trace results in bridges HDPC18
 
+32v16 
+    decaf
+        2208619
+        
+    sim_only
+        2209189
+    flexpath
+        2209061
+    
+    
+    
+
